--- a/.env
+++ b/.env
@@ -1,6 +1,11 @@
 FLASK_APP="main.py"
 FM_API_key="10e75989ed42f661691ca6650ae8ca60"
+
 FM_API_SECRET="1ed431df45a15e4a26b8fbe8fe2b40fd"
 RAPID_API_KEY="5ba63d3a24msh14f67e3bf82358dp13cec1jsn165a9a7d1d77"
+
 FM_URL="https://ws.audioscrobbler.com/2.0/?method=track.search"
 RAPID_URL="https://shazam.p.rapidapi.com/songs/v2/detect"
+
+
+fire_apiKey = "AIzaSyAHp9xMO8wKDY_LJ0YpzqbR8F757GNE1_A",
