--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask-Cors==4.0.0
 Flask-DotEnv==0.1.2
 Flask-Migrate==4.0.5
 Flask-SQLAlchemy==3.1.1
+gunicorn == 21.2.0
 requests==2.29.0
 requests-oauthlib==1.3.1
 requests-toolbelt==0.10.1
