done revamping the ui and added some more pages for better workflow. added user dashboard and home page, changed the request table by adding a new column tips

--- a/requirements.txt
+++ b/requirements.txt
@@ -16,5 +16,6 @@ Pyrebase4==4.7.1
 python-dotenv==0.19.2
 psycopg2-binary==2.9.9
 flask-socketio>=5.0.0
+python-socketio>=5.0.0
 eventlet>=0.30.2
 gevent
